--- a/bd.env
+++ b/bd.env
@@ -1,6 +1,6 @@
-DB_USER=u2790084_Neeis
-DB_HOST=vip166.hosting.reg.ru
-DB_NAME=u2790084_MedicalBook
-DB_PASSWORD=Pavel)598
+DB_USER=admin
+DB_HOST=localhost
+DB_NAME=User
+DB_PASSWORD=admin
 DB_PORT=3306
 PORT=3000
